helloworld2-flux/service-echoserver.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: helloworld2
  labels:
    app: echoserver
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: echoserver
    component: echoserver
