helloworld2-flux/networkpolicy-echoserver.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: echoserver
  namespace: helloworld2
  labels:
    app: echoserver
spec:
  podSelector:
    matchLabels:
      app: echoserver
      component: echoserver
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
